--- a/html_menu_1/booking-page.html
+++ b/html_menu_1/booking-page.html
@@ -5,9 +5,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="Find easily a doctor and book online an appointment">
+	<meta name="description" content="Búsqueda fácil de un Psicólogo en linea y reservación de turno">
 	<meta name="author" content="Ansonika">
-	<title>FINDOCTOR - Find easily a doctor and book online an appointment</title>
+	<title>PSYCHOBOOKING - Encuentre fácilmente un psicólogo y reserve una cita en línea</title>
 
 	<!-- Favicons-->
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
@@ -50,33 +50,26 @@
 					</div>
 				</div>
 				<nav class="col-lg-9 col-6">
-					<a class="cmn-toggle-switch cmn-toggle-switch__htx open_close" href="#0"><span>Menu mobile</span></a>
+					<a class="cmn-toggle-switch cmn-toggle-switch__htx open_close" href="#0"><span>Menú móvil</span></a>
 					<ul id="top_access">
 						<li id="user">
 							<a href="#0">
 								<figure><img src="http://via.placeholder.com/150x150.jpg" alt=""></figure>
-								Jhon Smith
+								Jhossias Calderón
 							</a>
 						</li>
 					</ul>
 					<div class="main-menu">
 						<ul>
 							<li class="submenu">
-								<a href="#0" class="show-submenu">Home<i class="icon-down-open-mini"></i></a>
-								<ul>
-									<li><a href="index.html">Home Default</a></li>
-									<li><a href="index-2.html">Home Version 2</a></li>
-									<li><a href="index-3.html">Home Version 3</a></li>
-									<li><a href="index-4.html">Home Version 4</a></li>
-									<li><a href="index-7.html">Home with Map</a></li>
-                                    <li><a href="index-6.html">Revolution Slider</a></li>
-									<li><a href="index-5.html">With Cookie Bar (EU law)</a></li>
-								</ul>
+								<li class="submenu">
+									<a href="index.html" class="show-home">Inicio<i class="icon-down-open-mini"></i></a>
+								</li>
 							</li>
 							<li class="submenu">
-								<a href="#0" class="show-submenu">Pages<i class="icon-down-open-mini"></i></a>
+								<a href="#0" class="show-submenu">Páginass<i class="icon-down-open-mini"></i></a>
 								<ul>
-									<li class="third-level"><a href="#0">List pages</a>
+									<li class="third-level"><a href="#0">Lista de Páginas</a>
 										<ul>
                                             <li><a href="list.html">List page</a></li>
 											<li><a href="grid-list.html">List grid page</a></li>
@@ -91,7 +84,7 @@
 											<li><a href="detail-page-working-booking.html">Detail working booking</a></li>
                                         </ul>
 									</li>
-									<li><a href="submit-review.html">Submit Review</a></li>
+									<li><a href="submit-review.html">Enviar Reseña</a></li>
 									<li><a href="blog-1.html">Blog</a></li>
 									<li><a href="badges.html">Badges</a></li>
 									<li><a href="login.html">Login</a></li>
@@ -104,7 +97,7 @@
 								</ul>
 							</li>
 							<li class="submenu">
-								<a href="#0" class="show-submenu">Extra Elements<i class="icon-down-open-mini"></i></a>
+								<a href="#0" class="show-submenu">Elementos Extra<i class="icon-down-open-mini"></i></a>
 								<ul>
                                     <li><a href="booking-page.html">Booking page</a></li>
                                     <li><a href="confirm.html">Confirm page</a></li>
@@ -123,7 +116,6 @@
 									<li><a href="404.html">404 page</a></li>
 								</ul>
 							</li>
-							<li><a href="#0">Buy this template</a></li>
 						</ul>
 					</div>
 					<!-- /main-menu -->
@@ -138,9 +130,9 @@
 		<div id="breadcrumb">
 			<div class="container">
 				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Category</a></li>
-					<li>Page active</li>
+					<li><a href="#">Inicio</a></li>
+					<li><a href="#">Categoría</a></li>
+					<li>Página Activa</li>
 				</ul>
 			</div>
 		</div>
@@ -151,26 +143,26 @@
 				<div class="col-xl-8 col-lg-8">
 				<div class="box_general_3 cart">
 					<div class="message">
-						<p>Exisitng Customer? <a href="#0">Click here to login</a></p>
+						<p>¿Cliente existente? <a href="#0">Click aquí para Iniciar Sesión</a></p>
 					</div>
 					<div class="form_title">
-						<h3><strong>1</strong>Your Details</h3>
+						<h3><strong>1</strong>Tus Detalles</h3>
 						<p>
-							Mussum ipsum cacilds, vidis litro abertis.
+							Colocar Información Personal
 						</p>
 					</div>
 					<div class="step">
 						<div class="row">
 							<div class="col-md-6 col-sm-6">
 								<div class="form-group">
-									<label>First name</label>
-									<input type="text" class="form-control" id="firstname_booking" name="firstname_booking" placeholder="Jhon">
+									<label>Nombre</label>
+									<input type="text" class="form-control" id="firstname_booking" name="firstname_booking" placeholder="Juan">
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6">
 								<div class="form-group">
-									<label>Last name</label>
-									<input type="text" class="form-control" id="lastname_booking" name="lastname_booking" placeholder="Doe">
+									<label>Apellido</label>
+									<input type="text" class="form-control" id="lastname_booking" name="lastname_booking" placeholder="Castro">
 								</div>
 							</div>
 						</div>
@@ -178,21 +170,21 @@
 							<div class="col-md-6 col-sm-6">
 								<div class="form-group">
 									<label>Email</label>
-									<input type="email" id="email_booking" name="email_booking" class="form-control" placeholder="jhon@doe.com">
+									<input type="email" id="email_booking" name="email_booking" class="form-control" placeholder="juansito@hotmail.com">
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6">
 								<div class="form-group">
-									<label>Confirm email</label>
-									<input type="email" id="email_booking_2" name="email_booking_2" class="form-control" placeholder="jhon@doe.com">
+									<label>Confirmar email</label>
+									<input type="email" id="email_booking_2" name="email_booking_2" class="form-control" placeholder="juansito@hotmail.com">
 								</div>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-6 col-sm-6">
 								<div class="form-group">
-									<label>Telephone</label>
-									<input type="text" id="telephone_booking" name="telephone_booking" class="form-control" placeholder="00 44 678 94329">
+									<label>Teléfono</label>
+									<input type="text" id="telephone_booking" name="telephone_booking" class="form-control" placeholder="0989571420">
 								</div>
 							</div>
 						</div>
@@ -201,20 +193,20 @@
 					<!--End step -->
 
 					<div class="form_title">
-						<h3><strong>2</strong>Payment Information</h3>
+						<h3><strong>2</strong>Información de Pago</h3>
 						<p>
-							Mussum ipsum cacilds, vidis litro abertis.
+							Agregar información para realizar el pago en línea
 						</p>
 					</div>
 					<div class="step">
 						<div class="form-group">
-							<label>Name on card</label>
-							<input type="text" class="form-control" id="name_card_booking" name="name_card_booking" placeholder="Jhon Doe">
+							<label>Nombre del Titular</label>
+							<input type="text" class="form-control" id="name_card_booking" name="name_card_booking" placeholder="Juan Castro">
 						</div>
 						<div class="row">
 							<div class="col-md-6">
 								<div class="form-group">
-									<label>Card number</label>
+									<label>Número de Tarjeta</label>
 									<input type="text" id="card_number" name="card_number" class="form-control" placeholder="xxxx - xxxx - xxxx - xxxx">
 								</div>
 							</div>
@@ -224,7 +216,7 @@
 						</div>
 						<div class="row">
 							<div class="col-md-6">
-								<label>Expiration date</label>
+								<label>Fecha de Expiración</label>
 								<div class="row">
 									<div class="col-md-6">
 										<div class="form-group">
@@ -233,14 +225,14 @@
 									</div>
 									<div class="col-md-6">
 										<div class="form-group">
-											<input type="text" id="expire_year" name="expire_year" class="form-control" placeholder="Year">
+											<input type="text" id="expire_year" name="expire_year" class="form-control" placeholder="AAAA">
 										</div>
 									</div>
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="form-group">
-									<label>Security code</label>
+									<label>Código de Seguridad</label>
 									<div class="row">
 										<div class="col-md-4">
 											<div class="form-group">
@@ -248,7 +240,7 @@
 											</div>
 										</div>
 										<div class="col-md-8">
-											<img src="img/icon_ccv.gif" width="50" height="29" alt="ccv"><small>Last 3 digits</small>
+											<img src="img/icon_ccv.gif" width="50" height="29" alt="ccv"><small>Últimos 3 Dígitos</small>
 										</div>
 									</div>
 								</div>
@@ -256,9 +248,9 @@
 						</div>
 						<!--End row -->
 
-						<h5>Or checkout with Paypal</h5>
+						<h5>O pagar con Paypal</h5>
 						<p>
-							Lorem ipsum dolor sit amet, vim id accusata sensibus, id ridens quaeque qui. Ne qui vocent ornatus molestie, reque fierent dissentiunt mel ea.
+							A continuación te redirigirás a la página de Paypal para proceder a tu pago
 						</p>
 						<p>
 							<img src="img/paypal_bt.png" alt="Image">
@@ -268,21 +260,21 @@
 					<!--End step -->
 
 					<div class="form_title">
-						<h3><strong>3</strong>Billing Address</h3>
+						<h3><strong>3</strong>Dirección de Envio</h3>
 						<p>
-							Mussum ipsum cacilds, vidis litro abertis.
+							Escribe correctamente tu dirección de envío con referencias.
 						</p>
 					</div>
 					<div class="step">
 						<div class="row">
 							<div class="col-md-6 col-sm-6">
-								<label>Country</label>
+								<label>País</label>
 								<div class="form-group">
 									<select class="form-control" name="country" id="country">
-										<option value="">Select your country</option>
-										<option value="Europe">Europe</option>
-										<option value="United states">United states</option>
-										<option value="Asia">Asia</option>
+										<option value="">Selecciona tu País</option>
+										<option value="Ecuador">Ecuador</option>
+										<option value="Estados Unidos">Estados Unidos</option>
+										<option value="Colombia">Colombia</option>
 									</select>
 								</div>
 							</div>
@@ -290,33 +282,33 @@
 						<div class="row">
 							<div class="col-md-6 col-sm-6">
 								<div class="form-group">
-									<label>Street line 1</label>
-									<input type="text" id="street_1" name="street_1" class="form-control" placeholder="Street line 1">
+									<label>Dirección Línea 1</label>
+									<input type="text" id="street_1" name="street_1" class="form-control" placeholder="Dirección Línea 1">
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6">
 								<div class="form-group">
-									<label>Street line 2</label>
-									<input type="text" id="street_2" name="street_2" class="form-control" placeholder="Street line 1">
+									<label>Dirección Línea 2</label>
+									<input type="text" id="street_2" name="street_2" class="form-control" placeholder="Dirección Línea 2">
 								</div>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-6">
 								<div class="form-group">
-									<label>City</label>
-									<input type="text" id="city_booking" name="city_booking" class="form-control" placeholder="Miami">
+									<label>Ciudad</label>
+									<input type="text" id="city_booking" name="city_booking" class="form-control" placeholder="Guayaquil">
 								</div>
 							</div>
 							<div class="col-md-3">
 								<div class="form-group">
-									<label>State</label>
-									<input type="text" id="state_booking" name="state_booking" class="form-control" placeholder="Florida">
+									<label>Provincia</label>
+									<input type="text" id="state_booking" name="state_booking" class="form-control" placeholder="Guayas">
 								</div>
 							</div>
 							<div class="col-md-3">
 								<div class="form-group">
-									<label>Postal code</label>
+									<label>Código Postal</label>
 									<input type="text" id="postal_code" name="postal_code" class="form-control" placeholder="00342">
 								</div>
 							</div>
@@ -326,10 +318,10 @@
 					<hr>
 					<!--End step -->
 					<div id="policy">
-						<h4>Cancellation policy</h4>
+						<h4>Política de Cancelación</h4>
 						<div class="form-group">
 							<div class="checkboxes">
-								<label class="container_check">I accept <a href="#0">terms and conditions and general policy</a>
+								<label class="container_check">Acepto <a href="#0">Los términos y condiciones y política general</a>
 									<input type="checkbox">
 									<span class="checkmark"></span>
 								</label>
@@ -343,28 +335,28 @@
 					<div class="box_general_3 booking">
 						<form>
 							<div class="title">
-								<h3>Your booking</h3>
+								<h3>Tu Reserva</h3>
 							</div>
 							<div class="summary">
 								<ul>
-									<li>Date: <strong class="float-right">11/12/2017</strong></li>
-									<li>Time: <strong class="float-right">10.30 am</strong></li>
-									<li>Dr. Name: <strong class="float-right">Dr. julia Jhones</strong></li>
+									<li>Fecha: <strong class="float-right">11/12/2020</strong></li>
+									<li>Hora: <strong class="float-right">10.30 am</strong></li>
+									<li>Nombre del Psic.: <strong class="float-right">Psic. Eliza Armaza</strong></li>
 								</ul>
 							</div>
 							<ul class="treatments checkout clearfix">
 								<li>
-									Back Pain visit <strong class="float-right">$55</strong>
+									Inhibición del deseo <strong class="float-right">$45</strong>
 								</li>
 								<li>
-									Cardiovascular screen <strong class="float-right">$55</strong>
+									Eyaculación Precoz <strong class="float-right">$50</strong>
 								</li>
 								<li class="total">
-									Total <strong class="float-right">$110</strong>
+									Total <strong class="float-right">$95</strong>
 								</li>
 							</ul>
 							<hr>
-							<a href="confirm.html" class="btn_1 full-width">Confirm and pay</a>
+							<a href="confirm.html" class="btn_1 full-width">Confirmar y Pagar</a>
 						</form>
 					</div>
 					<!-- /box_general -->
@@ -390,31 +382,31 @@
 				<div class="col-lg-3 col-md-4">
 					<h5>About</h5>
 					<ul class="links">
-						<li><a href="#0">About us</a></li>
+						<li><a href="#0">Acerca de Nosotros</a></li>
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="#0">FAQ</a></li>
-						<li><a href="login.html">Login</a></li>
-						<li><a href="register.html">Register</a></li>
+						<li><a href="login.html">Iniciar Sesión</a></li>
+						<li><a href="register.html">Registro</a></li>
 					</ul>
 				</div>
 				<div class="col-lg-3 col-md-4">
-					<h5>Useful links</h5>
+					<h5>Enlaces Útiles</h5>
 					<ul class="links">
-						<li><a href="#0">Doctors</a></li>
-						<li><a href="#0">Clinics</a></li>
-						<li><a href="#0">Specialization</a></li>
-						<li><a href="#0">Join as a Doctor</a></li>
-						<li><a href="#0">Download App</a></li>
+						<li><a href="#0">Psicólogos</a></li>
+						<li><a href="#0">Lugares</a></li>
+						<li><a href="#0">Especializaciones</a></li>
+						<li><a href="#0">Ingresar como Psicólogo</a></li>
+						<li><a href="#0">Descargar App</a></li>
 					</ul>
 				</div>
 				<div class="col-lg-3 col-md-4">
-					<h5>Contact with Us</h5>
+					<h5>Contactese con Nosotros</h5>
 					<ul class="contacts">
 						<li><a href="tel://61280932400"><i class="icon_mobile"></i> + 61 23 8093 3400</a></li>
 						<li><a href="mailto:info@findoctor.com"><i class="icon_mail_alt"></i> help@findoctor.com</a></li>
 					</ul>
 					<div class="follow_us">
-						<h5>Follow us</h5>
+						<h5>Síguenos</h5>
 						<ul>
 							<li><a href="#0"><i class="social_facebook"></i></a></li>
 							<li><a href="#0"><i class="social_twitter"></i></a></li>
@@ -429,12 +421,12 @@
 			<div class="row">
 				<div class="col-md-8">
 					<ul id="additional_links">
-						<li><a href="#0">Terms and conditions</a></li>
-						<li><a href="#0">Privacy</a></li>
+						<li><a href="#0">Terminos y Condiciones</a></li>
+						<li><a href="#0">Privacidad</a></li>
 					</ul>
 				</div>
 				<div class="col-md-4">
-					<div id="copy">© 2017 Findoctor</div>
+					<div id="copy">© 2020 PsychoBooking</div>
 				</div>
 			</div>
 		</div>
