--- a/html_menu_1/list.html
+++ b/html_menu_1/list.html
@@ -88,7 +88,7 @@
 									</li>
 									<li class="third-level"><a href="#0">Detail pages</a>
 										<ul>
-                                            <li><a href="detail-page.html">Detail page 1</a></li>
+                                            <li><a href="detail-page-2.html">Detail page 1</a></li>
                                             <li><a href="detail-page-2.html">Detail page 2</a></li>
                                     		<li><a href="detail-page-3.html">Detail page 3</a></li>
 											<li><a href="detail-page-working-booking.html">Detail working booking</a></li>
@@ -201,7 +201,7 @@
 					<div class="strip_list wow fadeIn">
 						<a href="#0" class="wish_bt"></a>
 						<figure>
-							<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" alt=""></a>
+							<a href="detail-page-2.html"><img src="http://via.placeholder.com/565x565.jpg" alt=""></a>
 						</figure>
 						<small>Pediatrician</small>
 						<h3>Dr. Cornfield</h3>
@@ -211,7 +211,7 @@
 						<ul>
 							<li><a href="#0" onclick="onHtmlClick('Doctors', 0)" class="btn_listing">View on Map</a></li>
 							<li><a href="https://www.google.com/maps/dir//Assistance+%E2%80%93+H%C3%B4pitaux+De+Paris,+3+Avenue+Victoria,+75004+Paris,+Francia/@48.8606548,2.3348734,14z/data=!4m15!1m6!3m5!1s0x0:0xa6a9af76b1e2d899!2sAssistance+%E2%80%93+H%C3%B4pitaux+De+Paris!8m2!3d48.8568376!4d2.3504305!4m7!1m0!1m5!1m1!1s0x47e67031f8c20147:0xa6a9af76b1e2d899!2m2!1d2.3504327!2d48.8568361" target="_blank">Directions</a></li>
-							<li><a href="detail-page.html">Book now</a></li>
+							<li><a href="detail-page-2.html">Book now</a></li>
 						</ul>
 					</div>
 					<!-- /strip_list -->
@@ -219,7 +219,7 @@
 					<div class="strip_list wow fadeIn">
 						<a href="#0" class="wish_bt"></a>
 						<figure>
-							<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" alt=""></a>
+							<a href="detail-page-2.html"><img src="http://via.placeholder.com/565x565.jpg" alt=""></a>
 						</figure>
 						<small>Psicologist</small>
 						<h3>Dr. Shoemaker</h3>
@@ -229,7 +229,7 @@
 						<ul>
 							<li><a href="#0" onclick="onHtmlClick('Doctors', 1)" class="btn_listing">View on Map</a></li>
 							<li><a href="https://www.google.com/maps/dir//Assistance+%E2%80%93+H%C3%B4pitaux+De+Paris,+3+Avenue+Victoria,+75004+Paris,+Francia/@48.8606548,2.3348734,14z/data=!4m15!1m6!3m5!1s0x0:0xa6a9af76b1e2d899!2sAssistance+%E2%80%93+H%C3%B4pitaux+De+Paris!8m2!3d48.8568376!4d2.3504305!4m7!1m0!1m5!1m1!1s0x47e67031f8c20147:0xa6a9af76b1e2d899!2m2!1d2.3504327!2d48.8568361" target="_blank">Directions</a></li>
-							<li><a href="detail-page.html">Book now</a></li>
+							<li><a href="detail-page-2.html">Book now</a></li>
 						</ul>
 					</div>
 					<!-- /strip_list -->
@@ -237,7 +237,7 @@
 					<div class="strip_list wow fadeIn">
 						<a href="#0" class="wish_bt"></a>
 						<figure>
-							<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" alt=""></a>
+							<a href="detail-page-2.html"><img src="http://via.placeholder.com/565x565.jpg" alt=""></a>
 						</figure>
 						<small>Pediatrician</small>
 						<h3>Dr. Lachinet</h3>
@@ -247,7 +247,7 @@
 						<ul>
 							<li><a href="#0" onclick="onHtmlClick('Doctors', 2)" class="btn_listing">View on Map</a></li>
 							<li><a href="https://www.google.com/maps/dir//Assistance+%E2%80%93+H%C3%B4pitaux+De+Paris,+3+Avenue+Victoria,+75004+Paris,+Francia/@48.8606548,2.3348734,14z/data=!4m15!1m6!3m5!1s0x0:0xa6a9af76b1e2d899!2sAssistance+%E2%80%93+H%C3%B4pitaux+De+Paris!8m2!3d48.8568376!4d2.3504305!4m7!1m0!1m5!1m1!1s0x47e67031f8c20147:0xa6a9af76b1e2d899!2m2!1d2.3504327!2d48.8568361" target="_blank">Directions</a></li>
-							<li><a href="detail-page.html">Book now</a></li>
+							<li><a href="detail-page-2.html">Book now</a></li>
 						</ul>
 					</div>
 					<!-- /strip_list -->
@@ -255,7 +255,7 @@
 					<div class="strip_list wow fadeIn">
 						<a href="#0" class="wish_bt"></a>
 						<figure>
-							<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" alt=""></a>
+							<a href="detail-page-2.html"><img src="http://via.placeholder.com/565x565.jpg" alt=""></a>
 						</figure>
 						<small>Pediatrician</small>
 						<h3>Dr. Rainwater</h3>
@@ -265,7 +265,7 @@
 						<ul>
 							<li><a href="#0" onclick="onHtmlClick('Doctors', 1)" class="btn_listing">View on Map</a></li>
 							<li><a href="https://www.google.com/maps/dir//Assistance+%E2%80%93+H%C3%B4pitaux+De+Paris,+3+Avenue+Victoria,+75004+Paris,+Francia/@48.8606548,2.3348734,14z/data=!4m15!1m6!3m5!1s0x0:0xa6a9af76b1e2d899!2sAssistance+%E2%80%93+H%C3%B4pitaux+De+Paris!8m2!3d48.8568376!4d2.3504305!4m7!1m0!1m5!1m1!1s0x47e67031f8c20147:0xa6a9af76b1e2d899!2m2!1d2.3504327!2d48.8568361" target="_blank">Directions</a></li>
-							<li><a href="detail-page.html">Book now</a></li>
+							<li><a href="detail-page-2.html">Book now</a></li>
 						</ul>
 					</div>
 					<!-- /strip_list -->
@@ -273,7 +273,7 @@
 					<div class="strip_list wow fadeIn">
 						<a href="#0" class="wish_bt"></a>
 						<figure>
-							<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" alt=""></a>
+							<a href="detail-page-2.html"><img src="http://via.placeholder.com/565x565.jpg" alt=""></a>
 						</figure>
 						<small>Psicologist</small>
 						<h3>Dr. Manzone</h3>
@@ -283,7 +283,7 @@
 						<ul>
 							<li><a href="#0" onclick="onHtmlClick('Doctors', 1)" class="btn_listing">View on Map</a></li>
 							<li><a href="https://www.google.com/maps/dir//Assistance+%E2%80%93+H%C3%B4pitaux+De+Paris,+3+Avenue+Victoria,+75004+Paris,+Francia/@48.8606548,2.3348734,14z/data=!4m15!1m6!3m5!1s0x0:0xa6a9af76b1e2d899!2sAssistance+%E2%80%93+H%C3%B4pitaux+De+Paris!8m2!3d48.8568376!4d2.3504305!4m7!1m0!1m5!1m1!1s0x47e67031f8c20147:0xa6a9af76b1e2d899!2m2!1d2.3504327!2d48.8568361" target="_blank">Directions</a></li>
-							<li><a href="detail-page.html">Book now</a></li>
+							<li><a href="detail-page-2.html">Book now</a></li>
 						</ul>
 					</div>
 					<!-- /strip_list -->
