--- a/html_menu_1/submit-review.html
+++ b/html_menu_1/submit-review.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="Find easily a doctor and book online an appointment">
+	<meta name="description" content="Búsqueda fácil de un Psicólogo en linea y reservación de turno">
 	<meta name="author" content="Ansonika">
-	<title>FINDOCTOR - Find easily a doctor and book online an appointment</title>
+	<title>PSYCHOBOOKING - Encuentre fácilmente un psicólogo y reserve una cita en línea</title>
 
 	<!-- Favicons-->
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
@@ -50,33 +50,26 @@
 					</div>
 				</div>
 				<nav class="col-lg-9 col-6">
-					<a class="cmn-toggle-switch cmn-toggle-switch__htx open_close" href="#0"><span>Menu mobile</span></a>
+					<a class="cmn-toggle-switch cmn-toggle-switch__htx open_close" href="#0"><span>Menú móvil</span></a>
 					<ul id="top_access">
 						<li id="user">
 							<a href="#0">
 								<figure><img src="http://via.placeholder.com/150x150.jpg" alt=""></figure>
-								Jhon Smith
+								Jhossias Calderón
 							</a>
 						</li>
 					</ul>
 					<div class="main-menu">
 						<ul>
 							<li class="submenu">
-								<a href="#0" class="show-submenu">Home<i class="icon-down-open-mini"></i></a>
-								<ul>
-									<li><a href="index.html">Home Default</a></li>
-									<li><a href="index-2.html">Home Version 2</a></li>
-									<li><a href="index-3.html">Home Version 3</a></li>
-									<li><a href="index-4.html">Home Version 4</a></li>
-									<li><a href="index-7.html">Home with Map</a></li>
-                                    <li><a href="index-6.html">Revolution Slider</a></li>
-									<li><a href="index-5.html">With Cookie Bar (EU law)</a></li>
-								</ul>
+								<li class="submenu">
+									<a href="index.html" class="show-home">Inicio<i class="icon-down-open-mini"></i></a>
+								</li>
 							</li>
 							<li class="submenu">
-								<a href="#0" class="show-submenu">Pages<i class="icon-down-open-mini"></i></a>
+								<a href="#0" class="show-submenu">Páginass<i class="icon-down-open-mini"></i></a>
 								<ul>
-									<li class="third-level"><a href="#0">List pages</a>
+									<li class="third-level"><a href="#0">Lista de Páginas</a>
 										<ul>
                                             <li><a href="list.html">List page</a></li>
 											<li><a href="grid-list.html">List grid page</a></li>
@@ -91,7 +84,7 @@
 											<li><a href="detail-page-working-booking.html">Detail working booking</a></li>
                                         </ul>
 									</li>
-									<li><a href="submit-review.html">Submit Review</a></li>
+									<li><a href="submit-review.html">Enviar Reseña</a></li>
 									<li><a href="blog-1.html">Blog</a></li>
 									<li><a href="badges.html">Badges</a></li>
 									<li><a href="login.html">Login</a></li>
@@ -104,7 +97,7 @@
 								</ul>
 							</li>
 							<li class="submenu">
-								<a href="#0" class="show-submenu">Extra Elements<i class="icon-down-open-mini"></i></a>
+								<a href="#0" class="show-submenu">Elementos Extra<i class="icon-down-open-mini"></i></a>
 								<ul>
                                     <li><a href="booking-page.html">Booking page</a></li>
                                     <li><a href="confirm.html">Confirm page</a></li>
@@ -123,7 +116,6 @@
 									<li><a href="404.html">404 page</a></li>
 								</ul>
 							</li>
-							<li><a href="#0">Buy this template</a></li>
 						</ul>
 					</div>
 					<!-- /main-menu -->
@@ -138,9 +130,9 @@
 		<div id="breadcrumb">
 			<div class="container">
 				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Category</a></li>
-					<li>Page active</li>
+					<li><a href="#">Inicio</a></li>
+					<li><a href="#">Categoría</a></li>
+					<li>Página Activa</li>
 				</ul>
 			</div>
 		</div>
@@ -150,10 +142,10 @@
 			<div class="row justify-content-center">
 				<div class="col-lg-8">
 					<div class="box_general_3 write_review">
-						<h1>Write a review for Dr. Julia Smooths</h1>
+						<h1>Escribe una reseña a Psic. Elenis Cajun</h1>
 						<div class="rating_submit">
 							<div class="form-group">
-							<label class="d-block">Overall rating</label>
+							<label class="d-block">Calificación General</label>
 							<span class="rating">
 								<input type="radio" class="rating-input" id="5_star" name="rating-input" value="5 Stars"><label for="5_star" class="rating-star"></label>
 								<input type="radio" class="rating-input" id="4_star" name="rating-input" value="4 Stars"><label for="4_star" class="rating-star"></label>
@@ -165,27 +157,27 @@
 						</div>
 						<!-- /rating_submit -->
 						<div class="form-group">
-							<label>Title of your review</label>
-							<input class="form-control" type="text" placeholder="If you could say it in one sentence, what would you say?">
+							<label>Título de tu Reseña</label>
+							<input class="form-control" type="text" placeholder="Si pudieras decirlo en una oración, ¿qué dirías?">
 						</div>
 						<div class="form-group">
-							<label>Your review</label>
-							<textarea class="form-control" style="height: 180px;" placeholder="Write your review here ..."></textarea>
+							<label>Tu Reseña</label>
+							<textarea class="form-control" style="height: 180px;" placeholder="Escribe tu reseña aquí ..."></textarea>
 						</div>
 						<div class="form-group">
-							<label>Add your photo (optional)</label>
+							<label>Añadir una foto (opcional)</label>
 							<div class="fileupload"><input type="file" name="fileupload" accept="image/*"></div>
 						</div>
 						<hr>
 						<div class="form-group">
 							<div class="checkboxes add_bottom_30 add_top_15">
-								<label class="container_check">I accept <a href="#0">terms and conditions and general policy</a>
+								<label class="container_check">Acepto <a href="#0"> Los términos y condiciones y política general</a>
 									<input type="checkbox">
 									<span class="checkmark"></span>
 								</label>
 							</div>
 						</div>
-						<a href="#0" class="btn_1">Submit review</a>
+						<a href="#0" class="btn_1">Enviar Reseña</a>
 					</div>
 				</div>
 			</div>
@@ -208,31 +200,31 @@
 				<div class="col-lg-3 col-md-4">
 					<h5>About</h5>
 					<ul class="links">
-						<li><a href="#0">About us</a></li>
+						<li><a href="#0">Acerca de Nosotros</a></li>
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="#0">FAQ</a></li>
-						<li><a href="login.html">Login</a></li>
-						<li><a href="register.html">Register</a></li>
+						<li><a href="login.html">Iniciar Sesión</a></li>
+						<li><a href="register.html">Registro</a></li>
 					</ul>
 				</div>
 				<div class="col-lg-3 col-md-4">
-					<h5>Useful links</h5>
+					<h5>Enlaces Útiles</h5>
 					<ul class="links">
-						<li><a href="#0">Doctors</a></li>
-						<li><a href="#0">Clinics</a></li>
-						<li><a href="#0">Specialization</a></li>
-						<li><a href="#0">Join as a Doctor</a></li>
-						<li><a href="#0">Download App</a></li>
+						<li><a href="#0">Psicólogos</a></li>
+						<li><a href="#0">Lugares</a></li>
+						<li><a href="#0">Especializaciones</a></li>
+						<li><a href="#0">Ingresar como Psicólogo</a></li>
+						<li><a href="#0">Descargar App</a></li>
 					</ul>
 				</div>
 				<div class="col-lg-3 col-md-4">
-					<h5>Contact with Us</h5>
+					<h5>Contactese con Nosotros</h5>
 					<ul class="contacts">
 						<li><a href="tel://61280932400"><i class="icon_mobile"></i> + 61 23 8093 3400</a></li>
 						<li><a href="mailto:info@findoctor.com"><i class="icon_mail_alt"></i> help@findoctor.com</a></li>
 					</ul>
 					<div class="follow_us">
-						<h5>Follow us</h5>
+						<h5>Síguenos</h5>
 						<ul>
 							<li><a href="#0"><i class="social_facebook"></i></a></li>
 							<li><a href="#0"><i class="social_twitter"></i></a></li>
@@ -247,12 +239,12 @@
 			<div class="row">
 				<div class="col-md-8">
 					<ul id="additional_links">
-						<li><a href="#0">Terms and conditions</a></li>
-						<li><a href="#0">Privacy</a></li>
+						<li><a href="#0">Terminos y Condiciones</a></li>
+						<li><a href="#0">Privacidad</a></li>
 					</ul>
 				</div>
 				<div class="col-md-4">
-					<div id="copy">© 2017 Findoctor</div>
+					<div id="copy">© 2020 PsychoBooking</div>
 				</div>
 			</div>
 		</div>
