--- a/html_menu_1/submit-review.html
+++ b/html_menu_1/submit-review.html
@@ -67,7 +67,7 @@
 								</li>
 							</li>
 							<li class="submenu">
-								<a href="#0" class="show-submenu">Páginass<i class="icon-down-open-mini"></i></a>
+								<a href="#0" class="show-submenu">Páginas<i class="icon-down-open-mini"></i></a>
 								<ul>
 									<li class="third-level"><a href="#0">Lista de Páginas</a>
 										<ul>
