--- a/html_menu_1/index.html
+++ b/html_menu_1/index.html
@@ -86,7 +86,7 @@
 									<li><a href="badges.html">Badges</a></li>
 									<li><a href="login.html">Inicio de sesión</a></li>
 									<li><a href="login-2.html">Inicio de sesión 2</a></li>
-									<li><a href="register-doctor.html">Register Psicólogo</a></li>
+									<li><a href="register-doctor.html">Registrar Psicólogo</a></li>
 									<li><a href="register-doctor-working.html">Registro de psicólogo</a></li>
 									<li><a href="register.html">Registrar</a></li>
 									<li><a href="about.html">Sobre nosotros</a></li>
@@ -133,8 +133,8 @@
 				<form method="GET" action="list.html">
 					<div id="custom-search-input">
 						<div class="input-group">
-							<input type="text" class=" search-query" placeholder="Ex. Name, Specialization ....">
-							<input type="submit" class="btn_search" value="Search">
+							<input type="text" class=" search-query" placeholder="Ej. Nombre, Especialización ....">
+							<input type="submit" class="btn_search" value="Buscar">
 						</div>
 						<ul>
 							<li>
@@ -178,7 +178,7 @@
 				</div>
 				<div class="col-lg-4">
 					<div class="box_feat" id="icon_3">
-						<h3>Agenda una</h3>
+						<h3>Agenda una visita</h3>
 						<p>Usu habeo equidem sanctus no. Suas summo id sed, erat erant oporteat cu pri. In eum omnes molestie.</p>
 					</div>
 				</div>
@@ -192,7 +192,7 @@
 		<div class="bg_color_1">
 			<div class="container margin_120_95">
 				<div class="main_title">
-					<h2>Most Viewed doctors</h2>
+					<h2>Psicólogos más vistos</h2>
 					<p>Usu habeo equidem sanctus no. Suas summo id sed, erat erant oporteat cu pri.</p>
 				</div>
 				<div id="reccomended" class="owl-carousel owl-theme">
@@ -200,7 +200,7 @@
 						<a href="detail-page.html">
 							<div class="views"><i class="icon-eye-7"></i>140</div>
 							<div class="title">
-								<h4>Dr. Julia Holmes<em>Pediatrician - Cardiologist</em></h4>
+								<h4>Dr. Julia Holmes<em>Psicólogo</em></h4>
 							</div><img src="http://via.placeholder.com/350x500.jpg" alt="">
 						</a>
 					</div>
@@ -208,7 +208,7 @@
 						<a href="detail-page.html">
 							<div class="views"><i class="icon-eye-7"></i>120</div>
 							<div class="title">
-								<h4>Dr. Julia Holmes<em>Pediatrician</em></h4>
+								<h4>Dr. Julia Holmes<em>Psicólogo</em></h4>
 							</div><img src="http://via.placeholder.com/350x500.jpg" alt="">
 						</a>
 					</div>
@@ -216,7 +216,7 @@
 						<a href="detail-page.html">
 							<div class="views"><i class="icon-eye-7"></i>115</div>
 							<div class="title">
-								<h4>Dr. Julia Holmes<em>Pediatrician</em></h4>
+								<h4>Dr. Julia Holmes<em>Psicólogo</em></h4>
 							</div><img src="http://via.placeholder.com/350x500.jpg" alt="">
 						</a>
 					</div>
@@ -224,7 +224,7 @@
 						<a href="detail-page.html">
 							<div class="views"><i class="icon-eye-7"></i>98</div>
 							<div class="title">
-								<h4>Dr. Julia Holmes<em>Pediatrician</em></h4>
+								<h4>Dr. Julia Holmes<em>Psicólogo</em></h4>
 							</div><img src="http://via.placeholder.com/350x500.jpg" alt="">
 						</a>
 					</div>
@@ -232,7 +232,7 @@
 						<a href="detail-page.html">
 							<div class="views"><i class="icon-eye-7"></i>98</div>
 							<div class="title">
-								<h4>Dr. Julia Holmes<em>Pediatrician</em></h4>
+								<h4>Dr. Julia Holmes<em>Psicólogo</em></h4>
 							</div><img src="http://via.placeholder.com/350x500.jpg" alt="">
 						</a>
 					</div>
@@ -245,7 +245,7 @@
 
 		<div class="container margin_120_95">
 			<div class="main_title">
-				<h2>Find your doctor or clinic</h2>
+				<h2>Encuentra un psicólogo y agenda una visita por ubicación</h2>
 				<p>Nec graeci sadipscing disputationi ne, mea ea nonumes percipitur. Nonumy ponderum oporteat cu mel, pro movet cetero at.</p>
 			</div>
 			<div class="row justify-content-center">
@@ -253,7 +253,7 @@
 					<div class="list_home">
 						<div class="list_title">
 							<i class="icon_pin_alt"></i>
-							<h3>Search by City or Zone</h3>
+							<h3>Buscar por ciudad o sector</h3>
 						</div>
 						<ul>
 							<li><a href="#0"><strong>23</strong>Albany</a></li>
@@ -273,7 +273,7 @@
 					<div class="list_home">
 						<div class="list_title">
 							<i class="icon_archive_alt"></i>
-							<h3>Search by type</h3>
+							<h3>Buscar por tipo</h3>
 						</div>
 						<ul>
 							<li><a href="#0"><strong>23</strong>Todosergist</a></li>
@@ -301,8 +301,8 @@
 						<p><img src="img/app_img.svg" alt="" class="img-fluid" width="500" height="433"></p>
 					</div>
 					<div class="col-md-6">
-						<small>Application</small>
-						<h3>Download <strong>PSYCHOBOOKING App</strong> Now!</h3>
+						<small>Aplicación móvil</small>
+						<h3>Descargar <strong>PSYCHOBOOKING App</strong> Ahora!</h3>
 						<p class="lead">Tota omittantur necessitatibus mei ei. Quo paulo perfecto eu, errem percipit ponderum no eos. Has eu mazim sensibus. Ad nonumes dissentiunt qui, ei menandri electram eos. Nam iisque consequuntur cu.</p>
 						<div class="app_buttons wow" data-wow-offset="100">
 							<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 43.1 85.9" style="enable-background:new 0 0 43.1 85.9;" xml:space="preserve">
@@ -334,23 +334,23 @@
 					</p>
 				</div>
 				<div class="col-lg-3 col-md-4">
-					<h5>About</h5>
+					<h5>Acerca de</h5>
 					<ul class="links">
-						<li><a href="#0">About us</a></li>
+						<li><a href="#0">Sobre nosotros</a></li>
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="#0">FAQ</a></li>
 						<li><a href="login.html">Login</a></li>
-						<li><a href="register.html">Register</a></li>
+						<li><a href="register.html">Registrar</a></li>
 					</ul>
 				</div>
 				<div class="col-lg-3 col-md-4">
-					<h5>Useful links</h5>
+					<h5>Links útiles</h5>
 					<ul class="links">
 						<li><a href="#0">Psicólogos</a></li>
 						<li><a href="#0">Consultorios</a></li>
 						<li><a href="#0">Specialization</a></li>
-						<li><a href="#0">Join as a Psicólogo</a></li>
-						<li><a href="#0">Download App</a></li>
+						<li><a href="#0">Unete como Psicólogo</a></li>
+						<li><a href="#0">Descargar App</a></li>
 					</ul>
 				</div>
 				<div class="col-lg-3 col-md-4">
@@ -375,8 +375,8 @@
 			<div class="row">
 				<div class="col-md-8">
 					<ul id="additional_links">
-						<li><a href="#0">Terms and conditions</a></li>
-						<li><a href="#0">Privacy</a></li>
+						<li><a href="#0">Términos y Condiciones</a></li>
+						<li><a href="#0">Privacidad</a></li>
 					</ul>
 				</div>
 				<div class="col-md-4">
