--- a/html_menu_1/list.html
+++ b/html_menu_1/list.html
@@ -5,9 +5,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="Find easily a doctor and book online an appointment">
+	<meta name="description" content="Encuentra facilmente un doctor y agenda tu cita ahora!">
 	<meta name="author" content="Ansonika">
-	<title>FINDOCTOR - Find easily a doctor and book online an appointment</title>
+	<title>PSYCHOBOOKING - Encuentra facilmente un doctor y agenda tu cita ahora!</title>
 
 	<!-- Favicons-->
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
@@ -99,9 +99,9 @@
 									<li><a href="badges.html">Badges</a></li>
 									<li><a href="login.html">Login</a></li>
 									<li><a href="login-2.html">Login 2</a></li>
-									<li><a href="register-doctor.html">Register Doctor</a></li>
+									<li><a href="register-doctor.html">Registrar Doctor</a></li>
 									<li><a href="register-doctor-working.html">Working doctor register</a></li>
-									<li><a href="register.html">Register</a></li>
+									<li><a href="register.html">Registrar</a></li>
 									<li><a href="about.html">About Us</a></li>
 									<li><a href="contacts.html">Contacts</a></li>
 								</ul>
@@ -126,7 +126,6 @@
 									<li><a href="404.html">404 page</a></li>
 								</ul>
 							</li>
-							<li><a href="#0">Buy this template</a></li>
 						</ul>
 					</div>
 					<!-- /main-menu -->
@@ -146,8 +145,8 @@
 					</div>
 					<div class="col-md-6">
 						<div class="search_bar_list">
-							<input type="text" class="form-control" placeholder="Ex. Specialist, Name, Doctor...">
-							<input type="submit" value="Search">
+							<input type="text" class="form-control" placeholder="Ej. Nombre, Especialización ....">
+							<input type="submit" value="Buscar">
 						</div>
 					</div>
 				</div>
@@ -161,14 +160,14 @@
 			<div class="container">
 				<ul class="clearfix">
 					<li>
-						<h6>Type</h6>
+						<h6>Tipo</h6>
 						<div class="switch-field">
 							<input type="radio" id="all" name="type_patient" value="all" checked>
-							<label for="all">All</label>
+							<label for="all">Todos</label>
 							<input type="radio" id="doctors" name="type_patient" value="doctors">
-							<label for="doctors">Doctors</label>
+							<label for="doctors">Piscólogos</label>
 							<input type="radio" id="clinics" name="type_patient" value="clinics">
-							<label for="clinics">Clinics</label>
+							<label for="clinics">Lugares</label>
 						</div>
 					</li>
 					<li>
@@ -180,12 +179,10 @@
 						</div>
 					</li>
 					<li>
-						<h6>Sort by</h6>
+						<h6>Ordenar por</h6>
 						<select name="orderby" class="selectbox">
-						<option value="Closest">Closest</option>
-						<option value="Best rated">Best rated</option>
-						<option value="Men">Men</option>
-						<option value="Women">Women</option>
+						<option value="Closest">Cercanos</option>
+						<option value="Best rated">Mejor puntuados</option>
 						</select>
 					</li>
 				</ul>
@@ -203,15 +200,15 @@
 						<figure>
 							<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" alt=""></a>
 						</figure>
-						<small>Pediatrician</small>
+						<small>Psicólogo</small>
 						<h3>Dr. Cornfield</h3>
 						<p>Id placerat tacimates definitionem sea, prima quidam vim no. Duo nobis persecuti cuodo....</p>
 						<span class="rating"><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star"></i><i class="icon_star"></i> <small>(145)</small></span>
 						<a href="badges.html" data-toggle="tooltip" data-placement="top" data-original-title="Badge Level" class="badge_list_1"><img src="img/badges/badge_1.svg" width="15" height="15" alt=""></a>
 						<ul>
-							<li><a href="#0" onclick="onHtmlClick('Doctors', 0)" class="btn_listing">View on Map</a></li>
+							<li><a href="#0" onclick="onHtmlClick('Piscólogos', 0)" class="btn_listing">Ver en el mapa</a></li>
 							<li><a href="https://www.google.com/maps/dir//Assistance+%E2%80%93+H%C3%B4pitaux+De+Paris,+3+Avenue+Victoria,+75004+Paris,+Francia/@48.8606548,2.3348734,14z/data=!4m15!1m6!3m5!1s0x0:0xa6a9af76b1e2d899!2sAssistance+%E2%80%93+H%C3%B4pitaux+De+Paris!8m2!3d48.8568376!4d2.3504305!4m7!1m0!1m5!1m1!1s0x47e67031f8c20147:0xa6a9af76b1e2d899!2m2!1d2.3504327!2d48.8568361" target="_blank">Directions</a></li>
-							<li><a href="detail-page.html">Book now</a></li>
+							<li><a href="detail-page.html">Agenda ahora</a></li>
 						</ul>
 					</div>
 					<!-- /strip_list -->
@@ -221,15 +218,15 @@
 						<figure>
 							<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" alt=""></a>
 						</figure>
-						<small>Psicologist</small>
+						<small>Psicólogo</small>
 						<h3>Dr. Shoemaker</h3>
 						<p>Id placerat tacimates definitionem sea, prima quidam vim no. Duo nobis persecuti cuodo....</p>
 						<span class="rating"><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star"></i><i class="icon_star"></i> <small>(145)</small></span>
 						<a href="badges.html" data-toggle="tooltip" data-placement="top" data-original-title="Badge Level" class="badge_list_1"><img src="img/badges/badge_2.svg" width="15" height="15" alt=""></a>
 						<ul>
-							<li><a href="#0" onclick="onHtmlClick('Doctors', 1)" class="btn_listing">View on Map</a></li>
+							<li><a href="#0" onclick="onHtmlClick('Piscólogos', 1)" class="btn_listing">Ver en el mapa</a></li>
 							<li><a href="https://www.google.com/maps/dir//Assistance+%E2%80%93+H%C3%B4pitaux+De+Paris,+3+Avenue+Victoria,+75004+Paris,+Francia/@48.8606548,2.3348734,14z/data=!4m15!1m6!3m5!1s0x0:0xa6a9af76b1e2d899!2sAssistance+%E2%80%93+H%C3%B4pitaux+De+Paris!8m2!3d48.8568376!4d2.3504305!4m7!1m0!1m5!1m1!1s0x47e67031f8c20147:0xa6a9af76b1e2d899!2m2!1d2.3504327!2d48.8568361" target="_blank">Directions</a></li>
-							<li><a href="detail-page.html">Book now</a></li>
+							<li><a href="detail-page.html">Agenda ahora</a></li>
 						</ul>
 					</div>
 					<!-- /strip_list -->
@@ -239,15 +236,15 @@
 						<figure>
 							<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" alt=""></a>
 						</figure>
-						<small>Pediatrician</small>
+						<small>Psicólogo</small>
 						<h3>Dr. Lachinet</h3>
 						<p>Id placerat tacimates definitionem sea, prima quidam vim no. Duo nobis persecuti cuodo....</p>
 						<span class="rating"><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star"></i><i class="icon_star"></i> <small>(145)</small></span>
 						<a href="badges.html" data-toggle="tooltip" data-placement="top" data-original-title="Badge Level" class="badge_list_1"><img src="img/badges/badge_3.svg" width="15" height="15" alt=""></a>
 						<ul>
-							<li><a href="#0" onclick="onHtmlClick('Doctors', 2)" class="btn_listing">View on Map</a></li>
+							<li><a href="#0" onclick="onHtmlClick('Piscólogos', 2)" class="btn_listing">Ver en el mapa</a></li>
 							<li><a href="https://www.google.com/maps/dir//Assistance+%E2%80%93+H%C3%B4pitaux+De+Paris,+3+Avenue+Victoria,+75004+Paris,+Francia/@48.8606548,2.3348734,14z/data=!4m15!1m6!3m5!1s0x0:0xa6a9af76b1e2d899!2sAssistance+%E2%80%93+H%C3%B4pitaux+De+Paris!8m2!3d48.8568376!4d2.3504305!4m7!1m0!1m5!1m1!1s0x47e67031f8c20147:0xa6a9af76b1e2d899!2m2!1d2.3504327!2d48.8568361" target="_blank">Directions</a></li>
-							<li><a href="detail-page.html">Book now</a></li>
+							<li><a href="detail-page.html">Agenda ahora</a></li>
 						</ul>
 					</div>
 					<!-- /strip_list -->
@@ -257,15 +254,15 @@
 						<figure>
 							<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" alt=""></a>
 						</figure>
-						<small>Pediatrician</small>
+						<small>Psicólogo</small>
 						<h3>Dr. Rainwater</h3>
 						<p>Id placerat tacimates definitionem sea, prima quidam vim no. Duo nobis persecuti cuodo....</p>
 						<span class="rating"><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star"></i><i class="icon_star"></i> <small>(145)</small></span>
 						<a href="badges.html" data-toggle="tooltip" data-placement="top" data-original-title="Badge Level" class="badge_list_1"><img src="img/badges/badge_4.svg" width="15" height="15" alt=""></a>
 						<ul>
-							<li><a href="#0" onclick="onHtmlClick('Doctors', 1)" class="btn_listing">View on Map</a></li>
+							<li><a href="#0" onclick="onHtmlClick('Piscólogos', 1)" class="btn_listing">Ver en el mapa</a></li>
 							<li><a href="https://www.google.com/maps/dir//Assistance+%E2%80%93+H%C3%B4pitaux+De+Paris,+3+Avenue+Victoria,+75004+Paris,+Francia/@48.8606548,2.3348734,14z/data=!4m15!1m6!3m5!1s0x0:0xa6a9af76b1e2d899!2sAssistance+%E2%80%93+H%C3%B4pitaux+De+Paris!8m2!3d48.8568376!4d2.3504305!4m7!1m0!1m5!1m1!1s0x47e67031f8c20147:0xa6a9af76b1e2d899!2m2!1d2.3504327!2d48.8568361" target="_blank">Directions</a></li>
-							<li><a href="detail-page.html">Book now</a></li>
+							<li><a href="detail-page.html">Agenda ahora</a></li>
 						</ul>
 					</div>
 					<!-- /strip_list -->
@@ -275,15 +272,15 @@
 						<figure>
 							<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" alt=""></a>
 						</figure>
-						<small>Psicologist</small>
+						<small>Psicólogo</small>
 						<h3>Dr. Manzone</h3>
 						<p>Id placerat tacimates definitionem sea, prima quidam vim no. Duo nobis persecuti cuodo....</p>
 						<span class="rating"><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star"></i><i class="icon_star"></i> <small>(145)</small></span>
 						<a href="badges.html" data-toggle="tooltip" data-placement="top" data-original-title="Badge Level" class="badge_list_1"><img src="img/badges/badge_4.svg" width="15" height="15" alt=""></a>
 						<ul>
-							<li><a href="#0" onclick="onHtmlClick('Doctors', 1)" class="btn_listing">View on Map</a></li>
+							<li><a href="#0" onclick="onHtmlClick('Piscólogos', 1)" class="btn_listing">Ver en el mapa</a></li>
 							<li><a href="https://www.google.com/maps/dir//Assistance+%E2%80%93+H%C3%B4pitaux+De+Paris,+3+Avenue+Victoria,+75004+Paris,+Francia/@48.8606548,2.3348734,14z/data=!4m15!1m6!3m5!1s0x0:0xa6a9af76b1e2d899!2sAssistance+%E2%80%93+H%C3%B4pitaux+De+Paris!8m2!3d48.8568376!4d2.3504305!4m7!1m0!1m5!1m1!1s0x47e67031f8c20147:0xa6a9af76b1e2d899!2m2!1d2.3504327!2d48.8568361" target="_blank">Directions</a></li>
-							<li><a href="detail-page.html">Book now</a></li>
+							<li><a href="detail-page.html">Agenda ahora</a></li>
 						</ul>
 					</div>
 					<!-- /strip_list -->
@@ -297,7 +294,7 @@
 							<li class="page-item"><a class="page-link" href="#">2</a></li>
 							<li class="page-item"><a class="page-link" href="#">3</a></li>
 							<li class="page-item">
-								<a class="page-link" href="#">Next</a>
+								<a class="page-link" href="#">Siguiente</a>
 							</li>
 						</ul>
 					</nav>
@@ -329,33 +326,33 @@
 					</p>
 				</div>
 				<div class="col-lg-3 col-md-4">
-					<h5>About</h5>
+					<h5>Sobre</h5>
 					<ul class="links">
-						<li><a href="#0">About us</a></li>
+						<li><a href="#0">Sobre nosotros</a></li>
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="#0">FAQ</a></li>
 						<li><a href="login.html">Login</a></li>
-						<li><a href="register.html">Register</a></li>
+						<li><a href="register.html">Registrar</a></li>
 					</ul>
 				</div>
 				<div class="col-lg-3 col-md-4">
-					<h5>Useful links</h5>
+					<h5>Links útiles</h5>
 					<ul class="links">
-						<li><a href="#0">Doctors</a></li>
-						<li><a href="#0">Clinics</a></li>
+						<li><a href="#0">Psicólogos</a></li>
+						<li><a href="#0">Consultorios</a></li>
 						<li><a href="#0">Specialization</a></li>
-						<li><a href="#0">Join as a Doctor</a></li>
-						<li><a href="#0">Download App</a></li>
+						<li><a href="#0">Unete como Psicólogo</a></li>
+						<li><a href="#0">Descargar App</a></li>
 					</ul>
 				</div>
 				<div class="col-lg-3 col-md-4">
-					<h5>Contact with Us</h5>
+					<h5>Contáctanos</h5>
 					<ul class="contacts">
 						<li><a href="tel://61280932400"><i class="icon_mobile"></i> + 61 23 8093 3400</a></li>
-						<li><a href="mailto:info@findoctor.com"><i class="icon_mail_alt"></i> help@findoctor.com</a></li>
+						<li><a href="mailto:info@psychobooking.com"><i class="icon_mail_alt"></i> help@psychobooking.com</a></li>
 					</ul>
 					<div class="follow_us">
-						<h5>Follow us</h5>
+						<h5>Síguenos</h5>
 						<ul>
 							<li><a href="#0"><i class="social_facebook"></i></a></li>
 							<li><a href="#0"><i class="social_twitter"></i></a></li>
@@ -370,12 +367,12 @@
 			<div class="row">
 				<div class="col-md-8">
 					<ul id="additional_links">
-						<li><a href="#0">Terms and conditions</a></li>
-						<li><a href="#0">Privacy</a></li>
+						<li><a href="#0">Términos y Condiciones</a></li>
+						<li><a href="#0">Privacidad</a></li>
 					</ul>
 				</div>
 				<div class="col-md-4">
-					<div id="copy">© 2017 Findoctor</div>
+					<div id="copy">© 2017 PSYCHOBOOKING</div>
 				</div>
 			</div>
 		</div>
