--- a/html_menu_1/about.html
+++ b/html_menu_1/about.html
@@ -85,7 +85,7 @@
 									</li>
 									<li class="third-level"><a href="#0">Detail pages</a>
 										<ul>
-                                            <li><a href="detail-page.html">Detail page 1</a></li>
+                                            <li><a href="detail-page-2.html">Detail page 1</a></li>
                                             <li><a href="detail-page-2.html">Detail page 2</a></li>
                                     		<li><a href="detail-page-3.html">Detail page 3</a></li>
 											<li><a href="detail-page-working-booking.html">Detail working booking</a></li>
@@ -149,7 +149,7 @@
 		<div class="bg_color_1">
 			<div class="container margin_120_95">
 				<div class="main_title">
-					<h1>About Findoctor</h1>
+					<h1>Acerca de PsychoBooking</h1>
 					<p>Cum doctus civibus efficiantur in imperdiet deterruisset.</p>
 				</div>
 				<div class="row justify-content-between">
@@ -172,45 +172,32 @@
 		
 		<div class="container margin_120_95">
 			<div class="main_title">
-				<h2>Our founders</h2>
-				<p>Cum doctus civibus efficiantur in imperdiet deterruisset.</p>
+				<h2>Desarrolladores</h2>
+				<p>Los desarrolladores de esta solucion.</p>
 			</div>
 			<div id="staff" class="owl-carousel owl-theme">
 				<div class="item">
-					<a href="detail-page.html">
+					<a href="detail-about-1.html">
 						<div class="title">
-							<h4>Julia Holmes<em>CEO</em></h4>
+							<h4>David Mendoza<em>Desarrollador 1</em></h4>
 						</div><img src="http://via.placeholder.com/350x500.jpg" alt="">
 					</a>
 				</div>
 				<div class="item">
-					<a href="detail-page.html">
+					<a href="detail-about-2.html">
 						<div class="title">
-							<h4>Lucas Smith<em>Marketing</em></h4>
+							<h4>Jhossias Pawell<em>Desarrollador 2</em></h4>
 						</div><img src="http://via.placeholder.com/350x500.jpg" alt="">
 					</a>
 				</div>
 				<div class="item">
-					<a href="detail-page.html">
+					<a href="detail-about-3.html">
 						<div class="title">
-							<h4>Paul Stephens<em>Business strategist</em></h4>
+							<h4>Galo Ortega<em>Desarrollador 3</em></h4>
 						</div><img src="http://via.placeholder.com/350x500.jpg" alt="">
 					</a>
 				</div>
-				<div class="item">
-					<a href="detail-page.html">
-						<div class="title">
-							<h4>Pablo Himenez<em>Customer Service</em></h4>
-						</div><img src="http://via.placeholder.com/350x500.jpg" alt="">
-					</a>
-				</div>
-				<div class="item">
-					<a href="detail-page.html">
-						<div class="title">
-							<h4>Andrew Stuttgart<em>Admissions</em></h4>
-						</div><img src="http://via.placeholder.com/350x500.jpg" alt="">
-					</a>
-				</div>
+				
 			</div>
 			<!-- /carousel -->
 		</div>
@@ -219,8 +206,8 @@
 		<div class="bg_color_1">
 			<div class="container margin_120_95">
 				<div class="main_title">
-					<h2>What user says about us</h2>
-					<p>Cum doctus civibus efficiantur in imperdiet deterruisset.</p>
+					<h2>Nuestros comentarios recibidos</h2>
+					<p>Valorados satisfactoriamente por la comunidad.</p>
 				</div>
 				<div class="row">
 			    <div class="col-md-4">
