--- a/html_menu_1/grid-list.html
+++ b/html_menu_1/grid-list.html
@@ -88,7 +88,7 @@
 									</li>
 									<li class="third-level"><a href="#0">Detail pages</a>
 										<ul>
-                                            <li><a href="detail-page.html">Detail page 1</a></li>
+                                            <li><a href="detail-page-2.html">Detail page 1</a></li>
                                             <li><a href="detail-page-2.html">Detail page 2</a></li>
                                     		<li><a href="detail-page-3.html">Detail page 3</a></li>
 											<li><a href="detail-page-working-booking.html">Detail working booking</a></li>
@@ -202,7 +202,7 @@
 						<div class="box_list wow fadeIn">
 							<a href="#0" class="wish_bt"></a>
 							<figure>
-								<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt="">
+								<a href="detail-page-2.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt="">
 									<div class="preview"><span>Read more</span></div>
 								</a>
 							</figure>
@@ -217,7 +217,7 @@
 							<ul>
 								<li><a href="#0" onclick="onHtmlClick('Doctors', 0)"><i class="icon_pin_alt"></i>View on map</a></li>
 								<li><a href="https://www.google.com/maps/dir//Assistance+%E2%80%93+H%C3%B4pitaux+De+Paris,+3+Avenue+Victoria,+75004+Paris,+Francia/@48.8606548,2.3348734,14z/data=!4m15!1m6!3m5!1s0x0:0xa6a9af76b1e2d899!2sAssistance+%E2%80%93+H%C3%B4pitaux+De+Paris!8m2!3d48.8568376!4d2.3504305!4m7!1m0!1m5!1m1!1s0x47e67031f8c20147:0xa6a9af76b1e2d899!2m2!1d2.3504327!2d48.8568361" target="_blank"><i class="icon_pin_alt"></i>Directions</a></li>
-								<li><a href="detail-page.html">Book now</a></li>
+								<li><a href="detail-page-2.html">Book now</a></li>
 							</ul>
 						</div>
 					</div>
@@ -227,7 +227,7 @@
 						<div class="box_list wow fadeIn">
 							<a href="#0" class="wish_bt"></a>
 							<figure>
-								<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt="">
+								<a href="detail-page-2.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt="">
 									<div class="preview"><span>Read more</span></div>
 								</a>
 							</figure>
@@ -241,7 +241,7 @@
 							<ul>
 								<li><a href="#0" onclick="onHtmlClick('Doctors', 1)"><i class="icon_pin_alt"></i>View on map</a></li>
 								<li><a href="https://www.google.com/maps/dir//Assistance+%E2%80%93+H%C3%B4pitaux+De+Paris,+3+Avenue+Victoria,+75004+Paris,+Francia/@48.8606548,2.3348734,14z/data=!4m15!1m6!3m5!1s0x0:0xa6a9af76b1e2d899!2sAssistance+%E2%80%93+H%C3%B4pitaux+De+Paris!8m2!3d48.8568376!4d2.3504305!4m7!1m0!1m5!1m1!1s0x47e67031f8c20147:0xa6a9af76b1e2d899!2m2!1d2.3504327!2d48.8568361" target="_blank"><i class="icon_pin_alt"></i>Directions</a></li>
-								<li><a href="detail-page.html">Book now</a></li>
+								<li><a href="detail-page-2.html">Book now</a></li>
 							</ul>
 						</div>
 					</div>
@@ -251,7 +251,7 @@
 						<div class="box_list wow fadeIn">
 							<a href="#0" class="wish_bt"></a>
 							<figure>
-								<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt="">
+								<a href="detail-page-2.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt="">
 									<div class="preview"><span>Read more</span></div>
 								</a>
 							</figure>
@@ -265,7 +265,7 @@
 							<ul>
 								<li><a href="#0" onclick="onHtmlClick('Doctors', 2)"><i class="icon_pin_alt"></i>View on map</a></li>
 								<li><a href="https://www.google.com/maps/dir//Assistance+%E2%80%93+H%C3%B4pitaux+De+Paris,+3+Avenue+Victoria,+75004+Paris,+Francia/@48.8606548,2.3348734,14z/data=!4m15!1m6!3m5!1s0x0:0xa6a9af76b1e2d899!2sAssistance+%E2%80%93+H%C3%B4pitaux+De+Paris!8m2!3d48.8568376!4d2.3504305!4m7!1m0!1m5!1m1!1s0x47e67031f8c20147:0xa6a9af76b1e2d899!2m2!1d2.3504327!2d48.8568361" target="_blank"><i class="icon_pin_alt"></i>Directions</a></li>
-								<li><a href="detail-page.html">Book now</a></li>
+								<li><a href="detail-page-2.html">Book now</a></li>
 							</ul>
 						</div>
 					</div>
@@ -275,7 +275,7 @@
 						<div class="box_list wow fadeIn">
 							<a href="#0" class="wish_bt"></a>
 							<figure>
-								<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt="">
+								<a href="detail-page-2.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt="">
 									<div class="preview"><span>Read more</span></div>
 								</a>
 							</figure>
@@ -289,7 +289,7 @@
 							<ul>
 								<li><a href="#0" onclick="onHtmlClick('Doctors', 3)"><i class="icon_pin_alt"></i>View on map</a></li>
 								<li><a href="https://www.google.com/maps/dir//Assistance+%E2%80%93+H%C3%B4pitaux+De+Paris,+3+Avenue+Victoria,+75004+Paris,+Francia/@48.8606548,2.3348734,14z/data=!4m15!1m6!3m5!1s0x0:0xa6a9af76b1e2d899!2sAssistance+%E2%80%93+H%C3%B4pitaux+De+Paris!8m2!3d48.8568376!4d2.3504305!4m7!1m0!1m5!1m1!1s0x47e67031f8c20147:0xa6a9af76b1e2d899!2m2!1d2.3504327!2d48.8568361" target="_blank"><i class="icon_pin_alt"></i>Directions</a></li>
-								<li><a href="detail-page.html">Book now</a></li>
+								<li><a href="detail-page-2.html">Book now</a></li>
 							</ul>
 						</div>
 					</div>
@@ -299,7 +299,7 @@
 						<div class="box_list wow fadeIn">
 							<a href="#0" class="wish_bt"></a>
 							<figure>
-								<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt="">
+								<a href="detail-page-2.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt="">
 									<div class="preview"><span>Read more</span></div>
 								</a>
 							</figure>
@@ -313,7 +313,7 @@
 							<ul>
 								<li><a href="#0" onclick="onHtmlClick('Doctors', 1)"><i class="icon_pin_alt"></i>View on map</a></li>
 								<li><a href="https://www.google.com/maps/dir//Assistance+%E2%80%93+H%C3%B4pitaux+De+Paris,+3+Avenue+Victoria,+75004+Paris,+Francia/@48.8606548,2.3348734,14z/data=!4m15!1m6!3m5!1s0x0:0xa6a9af76b1e2d899!2sAssistance+%E2%80%93+H%C3%B4pitaux+De+Paris!8m2!3d48.8568376!4d2.3504305!4m7!1m0!1m5!1m1!1s0x47e67031f8c20147:0xa6a9af76b1e2d899!2m2!1d2.3504327!2d48.8568361" target="_blank"><i class="icon_pin_alt"></i>Directions</a></li>
-								<li><a href="detail-page.html">Book now</a></li>
+								<li><a href="detail-page-2.html">Book now</a></li>
 							</ul>
 						</div>
 					</div>
@@ -323,7 +323,7 @@
 						<div class="box_list wow fadeIn">
 							<a href="#0" class="wish_bt"></a>
 							<figure>
-								<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt="">
+								<a href="detail-page-2.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt="">
 									<div class="preview"><span>Read more</span></div>
 								</a>
 							</figure>
@@ -337,7 +337,7 @@
 							<ul>
 								<li><a href="#0" onclick="onHtmlClick('Doctors', 2)"><i class="icon_pin_alt"></i>View on map</a></li>
 								<li><a href="https://www.google.com/maps/dir//Assistance+%E2%80%93+H%C3%B4pitaux+De+Paris,+3+Avenue+Victoria,+75004+Paris,+Francia/@48.8606548,2.3348734,14z/data=!4m15!1m6!3m5!1s0x0:0xa6a9af76b1e2d899!2sAssistance+%E2%80%93+H%C3%B4pitaux+De+Paris!8m2!3d48.8568376!4d2.3504305!4m7!1m0!1m5!1m1!1s0x47e67031f8c20147:0xa6a9af76b1e2d899!2m2!1d2.3504327!2d48.8568361" target="_blank"><i class="icon_pin_alt"></i>Directions</a></li>
-								<li><a href="detail-page.html">Book now</a></li>
+								<li><a href="detail-page-2.html">Book now</a></li>
 							</ul>
 						</div>
 					</div>
