--- a/html_menu_1/index-3.html
+++ b/html_menu_1/index-3.html
@@ -81,7 +81,7 @@
 									</li>
 									<li class="third-level"><a href="#0">Detail pages</a>
 										<ul>
-                                            <li><a href="detail-page.html">Detail page 1</a></li>
+                                            <li><a href="detail-page-2.html">Detail page 1</a></li>
                                             <li><a href="detail-page-2.html">Detail page 2</a></li>
                                     		<li><a href="detail-page-3.html">Detail page 3</a></li>
 											<li><a href="detail-page-working-booking.html">Detail working booking</a></li>
@@ -187,7 +187,7 @@
 							<a href="#0" data-toggle="tooltip" data-placement="top" title="Add to wishlist" class="wish_bt"></a>
 							<figure>
 
-								<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt=""></a>
+								<a href="detail-page-2.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt=""></a>
 								<div class="preview"><span>Read more</span></div>
 							</figure>
 							<div class="wrapper">
@@ -199,7 +199,7 @@
 							</div>
 							<ul>
 								<li><i class="icon-eye-7"></i> 854 Views</li>
-								<li><a href="detail-page.html">Book now</a></li>
+								<li><a href="detail-page-2.html">Book now</a></li>
 							</ul>
 						</div>
 					</div>
@@ -209,7 +209,7 @@
 							<a href="#0" data-toggle="tooltip" data-placement="top" title="Add to wishlist" class="wish_bt"></a>
 							<figure>
 
-								<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt=""></a>
+								<a href="detail-page-2.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt=""></a>
 								<div class="preview"><span>Read more</span></div>
 							</figure>
 							<div class="wrapper">
@@ -221,7 +221,7 @@
 							</div>
 							<ul>
 								<li><i class="icon-eye-7"></i> 854 Views</li>
-								<li><a href="detail-page.html">Book now</a></li>
+								<li><a href="detail-page-2.html">Book now</a></li>
 							</ul>
 						</div>
 					</div>
@@ -231,7 +231,7 @@
 							<a href="#0" data-toggle="tooltip" data-placement="top" title="Add to wishlist" class="wish_bt"></a>
 							<figure>
 
-								<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt=""></a>
+								<a href="detail-page-2.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt=""></a>
 								<div class="preview"><span>Read more</span></div>
 							</figure>
 							<div class="wrapper">
@@ -243,7 +243,7 @@
 							</div>
 							<ul>
 								<li><i class="icon-eye-7"></i> 854 Views</li>
-								<li><a href="detail-page.html">Book now</a></li>
+								<li><a href="detail-page-2.html">Book now</a></li>
 							</ul>
 						</div>
 					</div>
@@ -253,7 +253,7 @@
 							<a href="#0" data-toggle="tooltip" data-placement="top" title="Add to wishlist" class="wish_bt"></a>
 							<figure>
 
-								<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt=""></a>
+								<a href="detail-page-2.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt=""></a>
 								<div class="preview"><span>Read more</span></div>
 							</figure>
 							<div class="wrapper">
@@ -265,7 +265,7 @@
 							</div>
 							<ul>
 								<li><i class="icon-eye-7"></i> 854 Views</li>
-								<li><a href="detail-page.html">Book now</a></li>
+								<li><a href="detail-page-2.html">Book now</a></li>
 							</ul>
 						</div>
 					</div>
@@ -275,7 +275,7 @@
 							<a href="#0" data-toggle="tooltip" data-placement="top" title="Add to wishlist" class="wish_bt"></a>
 							<figure>
 
-								<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt=""></a>
+								<a href="detail-page-2.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt=""></a>
 								<div class="preview"><span>Read more</span></div>
 							</figure>
 							<div class="wrapper">
@@ -287,7 +287,7 @@
 							</div>
 							<ul>
 								<li><i class="icon-eye-7"></i> 854 Views</li>
-								<li><a href="detail-page.html">Book now</a></li>
+								<li><a href="detail-page-2.html">Book now</a></li>
 							</ul>
 						</div>
 					</div>
@@ -297,7 +297,7 @@
 							<a href="#0" data-toggle="tooltip" data-placement="top" title="Add to wishlist" class="wish_bt"></a>
 							<figure>
 
-								<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt=""></a>
+								<a href="detail-page-2.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt=""></a>
 								<div class="preview"><span>Read more</span></div>
 							</figure>
 							<div class="wrapper">
@@ -309,7 +309,7 @@
 							</div>
 							<ul>
 								<li><i class="icon-eye-7"></i> 854 Views</li>
-								<li><a href="detail-page.html">Book now</a></li>
+								<li><a href="detail-page-2.html">Book now</a></li>
 							</ul>
 						</div>
 					</div>
