--- a/html_menu_1/index-7.html
+++ b/html_menu_1/index-7.html
@@ -81,7 +81,7 @@
 									</li>
 									<li class="third-level"><a href="#0">Detail pages</a>
 										<ul>
-                                            <li><a href="detail-page.html">Detail page 1</a></li>
+                                            <li><a href="detail-page-2.html">Detail page 1</a></li>
                                             <li><a href="detail-page-2.html">Detail page 2</a></li>
                                     		<li><a href="detail-page-3.html">Detail page 3</a></li>
 											<li><a href="detail-page-working-booking.html">Detail working booking</a></li>
@@ -170,7 +170,7 @@
 							<a href="#0" data-toggle="tooltip" data-placement="top" title="Add to wishlist" class="wish_bt"></a>
 							<figure>
 
-								<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt=""></a>
+								<a href="detail-page-2.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt=""></a>
 								<div class="preview"><span>Read more</span></div>
 							</figure>
 							<div class="wrapper">
@@ -182,7 +182,7 @@
 							</div>
 							<ul>
 								<li><i class="icon-eye-7"></i> 854 Views</li>
-								<li><a href="detail-page.html">Book now</a></li>
+								<li><a href="detail-page-2.html">Book now</a></li>
 							</ul>
 						</div>
 					</div>
@@ -192,7 +192,7 @@
 							<a href="#0" data-toggle="tooltip" data-placement="top" title="Add to wishlist" class="wish_bt"></a>
 							<figure>
 
-								<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt=""></a>
+								<a href="detail-page-2.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt=""></a>
 								<div class="preview"><span>Read more</span></div>
 							</figure>
 							<div class="wrapper">
@@ -204,7 +204,7 @@
 							</div>
 							<ul>
 								<li><i class="icon-eye-7"></i> 854 Views</li>
-								<li><a href="detail-page.html">Book now</a></li>
+								<li><a href="detail-page-2.html">Book now</a></li>
 							</ul>
 						</div>
 					</div>
@@ -214,7 +214,7 @@
 							<a href="#0" data-toggle="tooltip" data-placement="top" title="Add to wishlist" class="wish_bt"></a>
 							<figure>
 
-								<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt=""></a>
+								<a href="detail-page-2.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt=""></a>
 								<div class="preview"><span>Read more</span></div>
 							</figure>
 							<div class="wrapper">
@@ -226,7 +226,7 @@
 							</div>
 							<ul>
 								<li><i class="icon-eye-7"></i> 854 Views</li>
-								<li><a href="detail-page.html">Book now</a></li>
+								<li><a href="detail-page-2.html">Book now</a></li>
 							</ul>
 						</div>
 					</div>
@@ -236,7 +236,7 @@
 							<a href="#0" data-toggle="tooltip" data-placement="top" title="Add to wishlist" class="wish_bt"></a>
 							<figure>
 
-								<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt=""></a>
+								<a href="detail-page-2.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt=""></a>
 								<div class="preview"><span>Read more</span></div>
 							</figure>
 							<div class="wrapper">
@@ -248,7 +248,7 @@
 							</div>
 							<ul>
 								<li><i class="icon-eye-7"></i> 854 Views</li>
-								<li><a href="detail-page.html">Book now</a></li>
+								<li><a href="detail-page-2.html">Book now</a></li>
 							</ul>
 						</div>
 					</div>
@@ -258,7 +258,7 @@
 							<a href="#0" data-toggle="tooltip" data-placement="top" title="Add to wishlist" class="wish_bt"></a>
 							<figure>
 
-								<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt=""></a>
+								<a href="detail-page-2.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt=""></a>
 								<div class="preview"><span>Read more</span></div>
 							</figure>
 							<div class="wrapper">
@@ -270,7 +270,7 @@
 							</div>
 							<ul>
 								<li><i class="icon-eye-7"></i> 854 Views</li>
-								<li><a href="detail-page.html">Book now</a></li>
+								<li><a href="detail-page-2.html">Book now</a></li>
 							</ul>
 						</div>
 					</div>
@@ -280,7 +280,7 @@
 							<a href="#0" data-toggle="tooltip" data-placement="top" title="Add to wishlist" class="wish_bt"></a>
 							<figure>
 
-								<a href="detail-page.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt=""></a>
+								<a href="detail-page-2.html"><img src="http://via.placeholder.com/565x565.jpg" class="img-fluid" alt=""></a>
 								<div class="preview"><span>Read more</span></div>
 							</figure>
 							<div class="wrapper">
@@ -292,7 +292,7 @@
 							</div>
 							<ul>
 								<li><i class="icon-eye-7"></i> 854 Views</li>
-								<li><a href="detail-page.html">Book now</a></li>
+								<li><a href="detail-page-2.html">Book now</a></li>
 							</ul>
 						</div>
 					</div>
