--- a/html_menu_1/index.html
+++ b/html_menu_1/index.html
@@ -75,7 +75,7 @@
 									</li>
 									<li class="third-level"><a href="#0">Detail pages</a>
 										<ul>
-                                            <li><a href="detail-page.html">Detail page 1</a></li>
+                                            <li><a href="detail-page-2.html">Detail page 1</a></li>
                                             <li><a href="detail-page-2.html">Detail page 2</a></li>
                                     		<li><a href="detail-page-3.html">Detail page 3</a></li>
 											<li><a href="detail-page-working-booking.html">Detail working booking</a></li>
@@ -197,7 +197,7 @@
 				</div>
 				<div id="reccomended" class="owl-carousel owl-theme">
 					<div class="item">
-						<a href="detail-page.html">
+						<a href="detail-page-2.html">
 							<div class="views"><i class="icon-eye-7"></i>140</div>
 							<div class="title">
 								<h4>Dr. Julia Holmes<em>Psicólogo</em></h4>
@@ -205,7 +205,7 @@
 						</a>
 					</div>
 					<div class="item">
-						<a href="detail-page.html">
+						<a href="detail-page-2.html">
 							<div class="views"><i class="icon-eye-7"></i>120</div>
 							<div class="title">
 								<h4>Dr. Julia Holmes<em>Psicólogo</em></h4>
@@ -213,7 +213,7 @@
 						</a>
 					</div>
 					<div class="item">
-						<a href="detail-page.html">
+						<a href="detail-page-2.html">
 							<div class="views"><i class="icon-eye-7"></i>115</div>
 							<div class="title">
 								<h4>Dr. Julia Holmes<em>Psicólogo</em></h4>
@@ -221,7 +221,7 @@
 						</a>
 					</div>
 					<div class="item">
-						<a href="detail-page.html">
+						<a href="detail-page-2.html">
 							<div class="views"><i class="icon-eye-7"></i>98</div>
 							<div class="title">
 								<h4>Dr. Julia Holmes<em>Psicólogo</em></h4>
@@ -229,7 +229,7 @@
 						</a>
 					</div>
 					<div class="item">
-						<a href="detail-page.html">
+						<a href="detail-page-2.html">
 							<div class="views"><i class="icon-eye-7"></i>98</div>
 							<div class="title">
 								<h4>Dr. Julia Holmes<em>Psicólogo</em></h4>
