--- a/html_menu_1/blog-post.html
+++ b/html_menu_1/blog-post.html
@@ -88,7 +88,7 @@
 									</li>
 									<li class="third-level"><a href="#0">Detail pages</a>
 										<ul>
-                                            <li><a href="detail-page.html">Detail page 1</a></li>
+                                            <li><a href="detail-page-2.html">Detail page 1</a></li>
                                             <li><a href="detail-page-2.html">Detail page 2</a></li>
                                     		<li><a href="detail-page-3.html">Detail page 3</a></li>
 											<li><a href="detail-page-working-booking.html">Detail working booking</a></li>
